Bug 1732859 - Force re-export of Glean symbols in C++. r=chutten

We previously tried to do this from Rust,
but that seems to be unreliable and currently only works for x86{,_64}.

The same trick however works from the C++ side: we reference one symbol
(and re-export it) and all the other symbols show up as well.
Now all `libxul.so` files build for Android targets export the `glean_*`
symbols, which are used by the Glean Android SDK to call into Glean.

Differential Revision: https://phabricator.services.mozilla.com/D126777